[package]
name = "nebulacrypto"
version = "0.1.0-pre.alpha.3"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"]} 
rand = "0.8"
chrono = { version = "0.4.39", features = ["serde"]}
sha2 = "0.10.8"
hex = "0.4.3"

[lib]
name = "nebula"
path = "src/lib.rs"

[[test]]
name = "transactions"
path = "tests/transactions.rs"

[[test]]
name = "staking"
path = "tests/staking.rs"