[package]
name = "nebula"
version = "1.0.0"
edition = "2024"
authors = ["NEBYTE contact@nebula-protocol.com"]
description = "Nebula is a blockchain-based system that replicates ICP’s architecture—including neurons, governance, canisters, transactions, and staking. It uses ed25519-dalek for key management and transaction signing."
license = "AGPL-3"
readme = "README.md"
repository = "https://github.com/NEBYTE/nebula"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"]} 
rand = "0.8"
chrono = { version = "0.4.39", features = ["serde"]}
sha2 = "0.10.8"
hex = "0.4.3"
rocksdb = "0.23.0"
config = "0.15.8"
parking_lot = {version = "0.12.0", features = ["deadlock_detection"]}

[package.metadata.deb]
maintainer = "NEBYTE contact@nebula-protocol.com"
copyright = "2025, NEBYTE"
license-file = ["LICENSE"]
depends = "libssl-dev"
section = "utils"
priority = "optional"
assets = [
    ["target/release/nebula", "/usr/bin/", "755"],
]

[[bin]]
name = "nebula"
path = "src/main.rs"

[lib]
name = "nebula"
path = "src/lib.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
